Finalise on Node type

--- a/testpage.html
+++ b/testpage.html
@@ -1,9 +1,8 @@
 <html>
-	<head>
-	<script type = "text/javascript" src="ref_types.js"/>
-	</head>
+  <head><title>Javascript Learn</title></head>
 	<body>
-	<script>displayMessage({name:"ales", age:45})</script>
-	A JS test page
+  	<p>This HTML file is mainly for studying javascript. </p>
+	<p>A JS test page</p>
+	<a href="#">Click Me</a>
 	</body>
 </html>
