Worked with element  attributes

--- a/testpage.html
+++ b/testpage.html
@@ -1,8 +1,13 @@
 <html>
-  <head><title>Javascript Learn</title></head>
+  <head>
+    <title>Javascript Learn</title>
+    <link rel="stylesheet" href="style.css" type="text/css"/>
+  </head>
 	<body>
-  	<p>This HTML file is mainly for studying javascript. </p>
-	<p>A JS test page</p>
-	<a href="#">Click Me</a>
+	  <div id="div1" class="main" title="main-div">
+	     	<p id="para1">This HTML file is mainly for studying javascript. </p
+		<p id="para2">A JS test page</p>
+	  </div>
+	<a id="link1" href="#">Click Me</a>
 	</body>
 </html>
