Reviewed html5 additions(classlist and getElementsByClassName)

--- a/testpage.html
+++ b/testpage.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css" type="text/css"/>
   </head>
 	<body>
-	  <div id="div1" class="main" title="main-div">
+	  <div id="div1" class="main admin" title="main-div">
 	     	<p id="para1">This HTML file is mainly for studying javascript. </p
 		<p id="para2">A JS test page</p>
 	  </div>
