--- a/events/event_test.html
+++ b/events/event_test.html
@@ -6,5 +6,11 @@
   <body>
     <p onclick="showMsg();" id="p1">This is a test of event</p>
     <div id="div1" onclick="alert('You clicked me');">Click Me</div>
+    <form method="post">
+      <input type="text" name="userName" value=""/>
+      <input type="button" value="Echo username" onclick="alert(userName.value)"/>
+      <input type="button" value="Just a Button" 
+			   onclick="try{alert(userName.value} catch(ex){log("error")})"/>
+    </form>
   </body>
 </html>
