Finish DOM Level 2 event handling and add cross-browser event handling

--- a/events/event_test.html
+++ b/events/event_test.html
@@ -10,7 +10,7 @@
       <input type="text" name="userName" value=""/>
       <input type="button" value="Echo username" onclick="alert(userName.value)"/>
       <input type="button" value="Just a Button" 
-			   onclick="try{alert(userName.value} catch(ex){log("error")})"/>
+			   onclick="try{alert(userName.value}) catch(ex){log("error")})"/>
     </form>
   </body>
 </html>
