Test event bubbling and document event properties

--- a/events/event_test.html
+++ b/events/event_test.html
@@ -12,5 +12,8 @@
       <input type="button" value="Just a Button" 
 			   onclick="try{alert(userName.value}) catch(ex){log("error")})"/>
     </form>
+    <div id="div2">
+      <input type="button" id="div2btn" value="Test bubbling"/>
+    </div>
   </body>
 </html>
